Revision history for Pod::Weaver::Section::Support

1.008 Unknown
 - Maintenance resumed by SHLOMIF .
 - Use https:// for MetaCPAN ( thanks DOLMEN! )
 - Remove need for autobox ( thanks KENTNL! )
 - perldoc $module rather than perldoc $main_module (RT#101917)
  - Thanks to Peter Roberts

1.007 2014-11-04T22:34:49Z UTC
 - Fix the Kwalitee link so it doesn't 404 anymore
 - Tweaked how we parsed the x_IRC metadata

 [STATISTICS]
 - code churn: 3 files changed, 392 insertions(+), 17 deletions(-)

1.006 2014-10-26T05:12:19Z UTC
 - Documentation tweaks
 - Resolve RT#78450 - retrieve IRC information from the dzil metadata if
   possible ( thanks BBYRD! )

1.005 2012-01-03T00:48:32Z UTC
 - Add the MetaCPAN website to the website list ( thanks RWSTAUNER! )
 - Tweak the logging system a bit ( thanks KENTNL! )
 - Fix some internal spelling mistakes ( thanks RWSTAUNER! )
 - Resolve RT#69033 - logging tweaks ( thanks RJBS! )

1.004 2011-04-21T21:48:17Z UTC
 - Tweaked the output of the websites so it also includes a descriptive
   text of the link
 - Add the deps.cpantesters.org website ( deps ) to the website list

1.003 2011-02-24T17:03:11Z UTC
 - Made sure the bugs_content and the metadata match up, otherwise it will
   throw an error! ( thanks XENO! )
 - Changed the *_content attributes to arrayrefs so you can sanely use them
   in a weaver.ini ( thanks XENO! )
 - The email attribute didn't add C<> to the address if you specified your
   own ( thanks XENO! )

1.002 2011-02-02T22:55:07Z UTC
 - Fix a few typos in the POD
 - Add email section to contact the author
 - Make the perldoc section a proper header
 - Tweaked the wording of the bugs section ( thanks DAGOLDEN! )
 - Add attribute to specify the bugs content ( thanks DAGOLDEN! )
 - Add attribute to specify the website content

1.001 2010-12-08T07:35:41Z UTC
 - Add attributes to control the repository section ( thanks RWSTAUNER! )
 - Reorganized the layout of the generated POD