@@ -6,6 +6,9 @@ Revision history for Pod::Weaver::Section::Support
  - Remove need for autobox ( thanks KENTNL! )
  - perldoc $module rather than perldoc $main_module (RT#101917)
   - Thanks to Peter Roberts
+ - Remove link to CPAN forum as it was discontinued.
+  - https://rt.cpan.org/Ticket/Display.html?id=101918
+  - Thanks to PWR for the report.
 
 1.007 2014-11-04T22:34:49Z UTC
  - Fix the Kwalitee link so it doesn't 404 anymore
